trying to fix contact form on ios

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -40,7 +40,6 @@ body {
     z-index: 11;
     width: 100%;
     transition: background-color .3s;
-    //background-color: $darker-shadow;
 
     a {
         text-decoration: none;
@@ -385,6 +384,9 @@ body {
 
 /*GALLERY*/
 .gallery {
+    background-image: url('../img/atractions/Shiny\ Overlay.svg');
+    background-size: cover;
+
     &__heading {
         @include sectionHeading($blackColor);
     }
@@ -562,23 +564,23 @@ body {
                     cursor: pointer;
 
 
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        background-color: $accentColor;
-                        height: 1em;
-                        width: 30px;
-                        left: -2px;
-                        top: 50%;
-                        z-index: -1;
-                        transition: transform .3s;
-                        transform-origin: bottom left;
-                    }
+                    // &::after {
+                    //     content: '';
+                    //     position: absolute;
+                    //     background-color: $accentColor;
+                    //     height: 1em;
+                    //     width: 30px;
+                    //     left: -2px;
+                    //     top: 50%;
+                    //     z-index: -1;
+                    //     transition: transform .3s;
+                    //     transform-origin: bottom left;
+                    // }
 
-                    &:hover::after,
-                    &:focus:after {
-                        transform: scale(1.3, 2);
-                    }
+                    // &:hover::after,
+                    // &:focus:after {
+                    //     transform: scale(1.3, 2);
+                    // }
 
                 }
             }
